
- Implemented FR#35638 (Adding udate to imap_fetch_overview results).
  (Charles_Duffy at dell dot com )
- Fixed possible buffer overflows in mysqlnd_list_fields,  mysqlnd_change_user.
  (Andrey)
- Fixed possible buffer overflows when handling error packets in mysqlnd.
  Reported by Stefan Esser. (Andrey)
- Fixed very rare memory leak in mysqlnd, when binding thousands of columns.
  (Andrey)

- Fixed a possible memory corruption in addcslashes(). Reported by Stefan    
  Esser (Dmitry)
- Fixed a possible stack exhaustion inside fnmatch(). Reported by Stefan    
  Esser (Ilia)
- Fixed a possible dechunking filter buffer overflow. Reported by Stefan Esser.
  (Pierre)
- Fixed a possible arbitrary memory access inside sqlite extension. Reported 
  by Mateusz Kocielski. (Ilia)
- Fixed string format validation inside phar extension. Reported by Stefan
  Esser (Ilia)
- Fixed handling of session variable serialization on certain prefix
  characters. Reported by Stefan Esser (Ilia)
- Fixed a NULL pointer dereference when processing invalid XML-RPC
  requests (Fixes CVE-2010-0397, bug #51288). (Raphael Geissert)
- Fixed 64-bit integer overflow in mhash_keygen_s2k(). (Clément LECIGNE, Stas)

- Fixed bug #51732 (Fileinfo __construct or open does not work with NULL).
  (Pierre)
- Fixed bug #51723 (Content-length header is limited to 32bit integer with
  Apache2 on Windows). (Pierre)
- Fixed bug #51721 (mark DOMNodeList and DOMNamedNodeMap as Traversable).
  (David Zuelke)
- Fixed bug #51690 (Phar::setStub looks for case-sensitive
  __HALT_COMPILER()). (Ilia)
- Fixed bug #51688 (ini per dir crashes when invalid document root  are given).
  (Pierre)
- Fixed bug #51671 (imagefill does not work correctly for small images).
  (Pierre)
- Fixed bug #51670 (getColumnMeta causes segfault when re-executing query
  after calling nextRowset). (Pierrick)
- Fixed bug #51647 Certificate file without private key (pk in another file)
  doesn't work. (Andrey)